project with redux structure

--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-devtools": "^4.25.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0"
   },
   "jest": {
     "modulePaths": [
